# mylittlechart

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/alert-delivery/: Cargo.toml
crates/alert-delivery/src/: lib.rs  telegram.rs  toast.rs  webhook.rs
crates/chart/: ARCHITECTURE.md  Cargo.toml
crates/chart-app/: Cargo.toml
crates/chart-app-vello/: Cargo.toml  build.rs
crates/chart-app-vello/src/: app_state.rs  chrome.rs  keychain.rs  main.rs  screenshot.rs  tooltip.rs
crates/chart-app-vello/src/agent/: commands.rs  mod.rs  snapshots.rs
crates/chart-app-vello/src/platform/: mod.rs  win32.rs
crates/chart-app-vello/src/render/: gpu_submit.rs  gpu_thread.rs  mod.rs  scene_builder.rs
crates/chart-app-vello/src/window/: event_handler.rs  mod.rs
crates/chart-app/src/: input.rs  lib.rs  panels_render.rs  panels_store.rs  persistence.rs  preset_cache.rs  scroll_dispatch.rs
crates/chart-app/src/agent/: manager.rs  mod.rs  snapshot.rs
crates/chart-app/src/chart_state/: agent_hover.rs  coords.rs  mod.rs
crates/chart-app/src/frame_lifecycle/: alert_render.rs  mod.rs  prepare.rs  tick.rs
crates/chart-app/src/input/: chart_out_events.rs  color_picker.rs  mod.rs  modals.rs  overlay.rs  panel_click.rs  settings.rs  sliders.rs  sync_group.rs
crates/chart-app/src/text_input/: manager.rs  mod.rs  types.rs
crates/chart-app/src/workspace/: dockable.rs  main_panel.rs  mod.rs  sidebar_panel.rs  tests.rs
crates/chart/src/: data_provider.rs  events.rs  indicator_source.rs  lib.rs  modal.rs  panel_app.rs  scale_settings.rs  toolbar.rs  types.rs
crates/chart/src/chart/: mod.rs
crates/chart/src/chart/annotations/: markers.rs  price_line.rs
crates/chart/src/chart/render/: candles.rs  crosshair.rs  grid.rs  mod.rs  overlays.rs  panes.rs  scales.rs  series.rs  utils.rs
crates/chart/src/chart/series/: enums.rs  mod.rs
crates/chart/src/chart/types/: compare.rs  crosshair.rs  grid.rs  kinetic.rs  legend.rs  mod.rs  price_scale.rs  time_scale.rs  tooltip.rs  viewport.rs  watermark.rs
crates/chart/src/crypto/: mod.rs
crates/chart/src/demo/: data_generator.rs  indicator_calc.rs  mod.rs  symbols.rs
crates/chart/src/drawing/: manager.rs  mod.rs  signal_manager.rs  trades.rs
crates/chart/src/drawing/primitives_v2/: config.rs  mod.rs  registry.rs  signals.rs  traits.rs  types.rs
crates/chart/src/engine/: mod.rs
crates/chart/src/engine/input/: mod.rs
crates/chart/src/engine/render/: context.rs  (+3 more)
crates/chart/src/i18n/: keys.rs  keys_common.rs  lang.rs  mod.rs  tables.rs  tables_common.rs  translations.rs
crates/chart/src/layout/: compute.rs  hit_tester.rs  mod.rs  panel_overlay.rs  rects.rs  render_chart.rs  render_chart_modals.rs  render_frame.rs  render_ui.rs  toolbar_state.rs
crates/chart/src/preset/: mod.rs  preset.rs  snapshots.rs  storage.rs
crates/chart/src/state/: action_executor.rs  app_state.rs  chart.rs  chart_window.rs  command.rs  history.rs  lock.rs  mod.rs  pane.rs  panel_grid.rs  selected_config.rs  sub_panel.rs  timeframe.rs  visibility.rs
crates/chart/src/tag_manager/: member_id.rs  mod.rs
crates/chart/src/templates/: chart_template.rs  compare_template.rs  indicator_set.rs  indicator_template.rs  manager.rs  mod.rs  primitive_template.rs  set_manager.rs  storage.rs
crates/chart/src/theme/: manager.rs  mod.rs  preset.rs  runtime.rs  style.rs
crates/chart/src/ui/: color_picker_state.rs  context_menu.rs  dropdown.rs  icons.rs  mod.rs  modal_settings.rs  modal_state.rs  scroll_state.rs  scroll_widget.rs  sync_color_grid.rs  tags_tabs_state.rs  toolbar_core.rs  toolbar_render.rs  z_order.rs
crates/chart/src/user_manager/: manager.rs  mod.rs  profile_manager.rs
crates/chart/src/user_profile/: device_settings.rs  mod.rs  profile.rs  storage.rs
crates/chart/src/utils/: color.rs  format.rs  math.rs  mod.rs
crates/chart/src/vault/: mod.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: crash.rs  lib.rs  logging.rs  reporter.rs  watchdog.rs
crates/indicators/: Cargo.toml  TEST_CHECKLIST.md
crates/indicators/src/: lib.rs
crates/indicators/src/bar_indicators/: instance_factory.rs  ohlcv_field.rs
crates/indicators/src/catalog/: master_catalog.rs  parameter_grid.rs  rendering_catalog.rs  synthetic_data.rs
crates/indicators/src/managers/: indicator_bridge.rs  indicator_calculator.rs  indicator_manager.rs  mod.rs  signal_manager.rs  trade_manager.rs
crates/indicators/src/signals/: catalog.rs  detectors.rs  mod.rs
crates/indicators/src/types/: calendar.rs
crates/live-data/: Cargo.toml
crates/live-data/src/: bridge.rs  convert.rs  depth_stitcher.rs  lib.rs  provider.rs  ws_manager.rs
crates/panels/: Cargo.toml  README.md
crates/panels/src/: lib.rs  panel_router.rs  panel_theme.rs  panel_trait.rs
crates/panels/src/info/: mod.rs
crates/panels/src/renderers/: mod.rs  panel_renderers_chart.rs  panel_renderers_graph.rs  panel_renderers_orderflow.rs  panel_renderers_table.rs  panel_renderers_util.rs
crates/panels/src/trading/: mod.rs  symbol_source.rs
crates/panels/src/visual/: mod.rs
crates/sidebar-content/: Cargo.toml
crates/sidebar-content/src/: agent_types.rs  agents_dock.rs  free_slot.rs  lib.rs  render.rs  sidebar_panel.rs  slot_hit.rs  state.rs  types.rs  watchlist.rs
crates/trading-manager/: Cargo.toml
crates/trading-manager/src/: config.rs  error.rs  lib.rs  manager.rs  order_manager.rs  paper_engine.rs  position_tracker.rs  snapshot.rs  types.rs
crates/updater/: Cargo.toml
crates/updater/src/: attest.rs  check.rs  cloud_sync.rs  download.rs  e2e_crypto.rs  key_sync.rs  lib.rs  oauth.rs  platform.rs  replace.rs  state.rs  telemetry.rs  token_store.rs  vault_params.rs  verify.rs
crates/vello-context/: Cargo.toml
crates/vello-context/src/: context.rs  lib.rs  text.rs
crates/zengeld-server/: Cargo.toml
crates/zengeld-server/src/: auth.rs  lib.rs  state.rs
crates/zengeld-server/src/routes/: bars.rs  catalog.rs  connectors_status.rs  health.rs  indicators.rs  indicators_crud.rs  keys.rs  mod.rs  primitives.rs  screenshot.rs  viewport.rs  watchlists.rs  windows.rs
(+669 files in other folders)
