[workspace]
members = [
    "crates/chart",
    "crates/chart-app",
    "crates/chart-app-vello",
    "crates/indicators",
    "crates/sidebar-content",
    "crates/alerts",
    "crates/alert-delivery",
    "crates/zengeld-client",
    "crates/live-data",
    "crates/zengeld-server",
    "crates/instanced-context",
    "crates/vello-context",
    "crates/vello-cpu-context",
    "crates/vello-hybrid-context",
    "crates/tiny-skia-context",
    "crates/updater",
]
resolver = "2"

[workspace.dependencies]
rayon = "1"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "s"
lto = true

# Optimize indicators in dev mode to prevent stack overflow
# (large enum with 480 variants needs optimization)
[profile.dev.package.zengeld-terminal-indicators]
opt-level = 2
