[workspace]
members = [
    "crates/chart",
    "crates/chart-app",
    "crates/chart-app-vello",
    "crates/indicators",
    "crates/sidebar-content",
    "crates/alerts",
    "crates/alert-delivery",
    "crates/live-data",
    "crates/zengeld-server",
    "crates/instanced-context",
    "crates/vello-context",
    "crates/vello-cpu-context",
    "crates/vello-hybrid-context",
    "crates/tiny-skia-context",
    "crates/updater",
]
resolver = "2"

[workspace.dependencies]
rayon = "1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hkdf = "0.12"
hex = "0.4"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["std"] }
base64 = "0.22"

[workspace.package]
version = "0.5.89"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "s"
lto = true

# Optimize indicators in dev mode to prevent stack overflow
# (large enum with 480 variants needs optimization)
[profile.dev.package.zengeld-terminal-indicators]
opt-level = 2

# Local development overrides — use local source instead of crates.io.
# CI strips this section before building (see .github/workflows/release.yml).
[patch.crates-io]
uzor = { path = "../uzor/uzor" }
uzor-backend-vello-gpu = { path = "../uzor/uzor-backend-vello-gpu" }
uzor-backend-wgpu-instanced = { path = "../uzor/uzor-backend-wgpu-instanced" }
uzor-backend-vello-hybrid = { path = "../uzor/uzor-backend-vello-hybrid" }
uzor-backend-vello-cpu = { path = "../uzor/uzor-backend-vello-cpu" }
uzor-backend-tiny-skia = { path = "../uzor/uzor-backend-tiny-skia" }
