[workspace]
members = [
    "crates/chart",
    "crates/chart-app",
    "crates/chart-app-vello",
    "crates/indicators",
    "crates/sidebar-content",
    "crates/panels",
    "crates/alerts",
    "crates/alert-delivery",
    "crates/live-data",
    "crates/zengeld-server",
    "crates/instanced-context",
    "crates/vello-context",
    "crates/vello-cpu-context",
    "crates/vello-hybrid-context",
    "crates/tiny-skia-context",
    "crates/bar-store",
    "crates/bar-service",
    "crates/trade-store",
    "crates/trade-service",
    "crates/orderbook-store",
    "crates/orderbook-service",
    "crates/diagnostics",
    "crates/trading-manager",
]
resolver = "2"

[workspace.dependencies]
rayon = "1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hkdf = "0.12"
hex = "0.4"
rand = "0.8"

[workspace.package]
version = "0.5.570"
edition = "2021"
license = "BUSL-1.1"

[profile.release]
opt-level = "s"
lto = true
debug = "line-tables-only"
strip = "none"

# Optimize indicators in dev mode to prevent stack overflow
# (large enum with 480 variants needs optimization)
[profile.dev.package.zengeld-terminal-indicators]
opt-level = 2

# Local development overrides — use local source instead of crates.io.
# CI strips this section before building (see .github/workflows/release.yml).
[patch.crates-io]
digdigdig3 = { path = "../digdigdig3/crates/digdigdig3" }
gate4agent = { path = "../gate4agent" }
uzor = { path = "../uzor/uzor" }
uzor-render-vello-gpu = { path = "../uzor/uzor-render-vello-gpu" }
uzor-render-vello-cpu = { path = "../uzor/uzor-render-vello-cpu" }
uzor-render-vello-hybrid = { path = "../uzor/uzor-render-vello-hybrid" }
uzor-render-tiny-skia = { path = "../uzor/uzor-render-tiny-skia" }
uzor-render-wgpu-instanced = { path = "../uzor/uzor-render-wgpu-instanced" }
