[package]
name = "alert-delivery"
version.workspace = true
edition.workspace = true
description = "Alert notification delivery for zengeld-terminal"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
