[package]
name = "chart-app-vello"
version.workspace = true
edition.workspace = true
description = "Standalone chart vello/winit runner — like terminal-vello but for chart-app"

[[bin]]
name = "mylittlechart"
path = "src/main.rs"

[dependencies]
diagnostics = { path = "../diagnostics" }
chart-app = { path = "../chart-app" }
sidebar-content = { path = "../sidebar-content" }
alert-delivery = { path = "../alert-delivery" }
live-data = { path = "../live-data" }
bar-store = { path = "../bar-store" }
bar-service = { path = "../bar-service" }
trade-service = { path = "../trade-service" }
trade-store = { path = "../trade-store" }
orderbook-service = { path = "../orderbook-service" }
orderbook-store = { path = "../orderbook-store" }
vello-context = { path = "../vello-context" }
zengeld-chart = { path = "../chart" }
uzor = "=1.2.2"
vello = "0.7"
winit = "0.30"
pollster = "0.4"
png = "0.17"
arboard = "3"
tokio = { version = "1", features = ["sync"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
zengeld-server = { path = "../zengeld-server" }
zengeld-terminal-indicators = { path = "../indicators" }
sysinfo = "0.34"
instanced-context = { path = "../instanced-context" }
uzor-render-wgpu-instanced = "=1.2.2"
vello-cpu-context = { path = "../vello-cpu-context" }
vello-hybrid-context = { path = "../vello-hybrid-context" }
uzor-render-vello-hybrid = "=1.2.2"
vello_hybrid = { version = "0.0.6", features = ["wgpu"] }
tiny-skia-context = { path = "../tiny-skia-context" }
zengeld-updater = { path = "../updater", optional = true }
keyring = "3"

[build-dependencies]
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
winresource = "0.1"

[features]
default = ["updater"]
updater = ["dep:zengeld-updater"]
standalone = []
