[package]
name = "chart-app"
version = "0.1.0"
edition = "2021"

[dependencies]
zengeld-chart = { path = "../chart" }
zengeld-terminal-indicators = { path = "../indicators" }
uzor = "=1.3.5"
sidebar-content = { path = "../sidebar-content" }
zengeld-panels = { path = "../panels" }
alerts = { path = "../alerts" }
alert-delivery = { path = "../alert-delivery" }
live-data = { path = "../live-data" }
bar-service = { path = "../bar-service" }
trade-service = { path = "../trade-service" }
orderbook-service = { path = "../orderbook-service" }
trading-manager = { path = "../trading-manager" }
digdigdig3 = "=0.3.4"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
gate4agent = "=0.2.37"
vt100 = "0.15"
log = "0.4"
