[package]
name = "zengeld-chart"
version.workspace = true
edition.workspace = true
description = "Lightweight, standalone charting library - canvas, multi-charts, sub-panes, primitives, drawing tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nickshouse/zengeld-chart"
keywords = ["chart", "trading", "canvas", "financial", "visualization"]
categories = ["visualization", "graphics", "rendering"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uzor = "1.0.6"
alerts = { path = "../alerts" }
alert-delivery = { path = "../alert-delivery" }

[features]
default = []
