[package]
name = "zengeld-terminal-indicators"
version = "0.1.0"
edition = "2021"
description = "Technical indicators library for zengeld-terminal"
license = "MIT"

[dependencies]
once_cell = "1.19"
arrayvec = "0.7"
rayon = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Chart library (for IndicatorCategory, TimeframeVisibilityConfig, Viewport, PriceScale, RenderContext, etc.)
zengeld-chart = { path = "../chart" }
