[package]
name = "zengeld-panels"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uzor = "=1.2.2"
zengeld-chart = { path = "../chart" }
trade-service = { path = "../trade-service" }
orderbook-service = { path = "../orderbook-service" }
trading-manager = { path = "../trading-manager" }
