[package]
name = "sidebar-content"
version = "0.1.0"
edition = "2021"

[dependencies]
zengeld-chart = { path = "../chart" }
uzor = "1.0"
alerts = { path = "../alerts" }
serde = { version = "1.0", features = ["derive"] }
gate4agent = { path = "../../../gate4agent", version = "0.1.6" }

[dev-dependencies]
serde_json = "1.0"
