[package]
name = "trading-manager"
version.workspace = true
edition.workspace = true

[dependencies]
digdigdig3 = "=0.1.32"
live-data = { path = "../live-data" }
orderbook-service = { path = "../orderbook-service" }
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
