[package]
name = "zengeld-updater"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zengeld-chart = { path = "../chart" }
tokio = { version = "1", features = ["rt", "time", "sync", "process", "fs", "macros"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
sha2 = "0.10"
aes-gcm = { workspace = true }
pbkdf2 = { workspace = true }
hkdf = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
hostname = "0.4"
