[package]
name = "vello-context"
version.workspace = true
edition.workspace = true
description = "VelloGpuRenderContext — chart-aware wrapper delegating to uzor-backend-vello-gpu"

[dependencies]
zengeld-chart = { path = "../chart" }
uzor = "=1.2.2"
uzor-render-vello-gpu = "=1.2.2"
vello = "0.7"
skrifa = "0.37"
