[package]
name = "vello-context"
version.workspace = true
edition.workspace = true
description = "VelloGpuRenderContext — chart-aware wrapper delegating to uzor-backend-vello-gpu"

[dependencies]
zengeld-chart = { path = "../chart" }
uzor = "=1.3.4"
uzor-render-vello-gpu = "=1.3.4"
vello = "0.8"
skrifa = "0.40"
