[package]
name = "zengeld-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.22"
socket2 = "0.5"

# Workspace path dependencies
live-data = { path = "../live-data" }
